@@ -21,21 +21,24 @@
 	#define assert(x)
 #endif
 
-#ifndef NOINLINE
+//#ifndef NOINLINE
 #ifndef INLINE
 #if defined(__GNUC__)
 	#define INLINE extern inline
 #elif defined(_MSC_VER)  //@TODO: Get this working in MSVC++.
 	#define NOINLINE
-	#define INLINE
-	//#define INLINE  __inline
+	//#define INLINE
+	/*#ifndef _WIN64  // Cannot use inline assembly in x64 target platform.
+		#define USE_WIN32_ASM
+	#endif//_WIN64*/
+	#define INLINE __inline
 #else
 	#define INLINE inline
 #endif
 #endif
-#else
-#define INLINE
-#endif //NOINLINE
+//#else
+//#define INLINE
+//#endif //NOINLINE
 
 #ifdef __cplusplus
 extern "C" {
